misc UI fixes - more to come
